--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,15 +35,14 @@
                         <p class="description">
                             ITの飛躍的な進歩により個人と個人が繋がれるようになった現代。
                             <br><br>
-                            今までは安心して「サービス」を受けれる為に「会社」が従業員を教育し「品質を担保」してきました。
+                            今までは「サービス」を安心して受けれる為に「会社」が従業員を教育し「品質を担保」してきました。
                         </p>
                         <h3 class="title">これからは違います</h3>
                         <p class="description">
                             埋もれている「個人」が努力し提供するサービスを「今」だからこそ利用者から直接フィードバックを受けれます。
                             <br><br>
-                            「個人」に評価され、それが「個人」の信用・ブランドになります。
-                            努力している「個人」が最大限報われて評価される環境を、
-                            私たちは提供する努力を惜しみません。
+                            「個人」の評価が見える化できるようになり、それが「個人」の信用・ブランドになります。
+                            努力している「個人」が最大限報われる環境を、私たちは提供する努力を惜しみません。
                         </p>
                     </div>
                 </div>
