--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,7 @@
                         <p class="description">
                             ITの飛躍的な進歩により個人と個人が繋がれるようになった現代。
                             <br><br>
-                            今までは私たちが「サービス」を安心して受けれる為に「会社」が従業員を教育し「品質を担保」してきました。
+                            これまでは私たちが安心してサービスを受けれる為に「会社」が従業員を教育し「サービス品質」を担保してきました。
                         </p>
                         <h3 class="title">これからは違います</h3>
                         <p class="description">
