--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -161,77 +161,45 @@
             <div class="container">
                 <h2 class="title">Reviews</h2>
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="card card-profile card-plain">
+                    <ng-container *ngIf="reviews && reviews.length>0">
+                        <div class="col-md-4" *ngFor="let review of reviews">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="#avatar"><img src="./assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-block">
+                                    <div class="author">
+                                        <h4 class="card-title">{{ review.user.username }}</h4>
+                                        <h6 class="card-category">Product Manager</h6>
+                                        <bar-rating [rate]="review.rating" 
+                                                    [max]="5" 
+                                                    [theme]="'stars'"
+                                                    [readOnly]="true" ></bar-rating>
+                                    </div>
+                                    <p class="card-description text-center">
+                                        {{ review.comment }}
+                                    </p>
+                                </div>
+                                <div class="card-footer text-center">
+                                </div>
+                            </div>
+                        </div>
+                    </ng-container>
+                    <ng-container *ngIf="!reviews || reviews.length==0">
+                        <div class="card card-profile card-plain ml-auto mr-auto">
                             <div class="card-avatar">
                                 <a href="#avatar"><img src="./assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
                             </div>
                             <div class="card-block">
-                                <a href="#">
-                                    <div class="author">
-                                        <h4 class="card-title">Henry Ford</h4>
-                                        <h6 class="card-category">Product Manager</h6>
-                                    </div>
-                                </a>
-                                <p class="card-description text-center">
-                                Teamwork is so important that it is virtually impossible for you to reach the heights of your capabilities or make the money that you want without becoming very good at it.
-                                </p>
+                                <div class="author">
+                                    <h4 class="card-title">No reviews yet!</h4>
+                                    <h6 class="card-category"></h6>
+                                </div>
                             </div>
                             <div class="card-footer text-center">
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card card-profile card-plain">
-                            <div class="card-avatar">
-                                <a href="#avatar"><img src="./assets/img/faces/joe-gardner-2.jpg" alt="..."></a>
-                            </div>
-                            <div class="card-block">
-                                <a href="#">
-                                    <div class="author">
-                                        <h4 class="card-title">Sophie West</h4>
-                                        <h6 class="card-category">Designer</h6>
-                                    </div>
-                                </a>
-                                <p class="card-description text-center">
-                                A group becomes a team when each member is sure enough of himself and his contribution to praise the skill of the others. No one can whistle a symphony. It takes an orchestra to play it.
-                                </p>
-                            </div>
-                            <div class="card-footer text-center">
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card card-profile card-plain">
-                            <div class="card-avatar">
-                                <a href="#avatar"><img src="./assets/img/faces/erik-lucatero-2.jpg" alt="..."></a>
-                            </div>
-                            <div class="card-block">
-                                <a href="#">
-                                    <div class="author">
-                                        <h4 class="card-title">Robert Orben</h4>
-                                        <h6 class="card-category">Developer</h6>
-                                    </div>
-                                </a>
-                                <p class="card-description text-center">
-                                The strength of the team is each individual member. The strength of each member is the team. If you can laugh together, you can work together, silence isn’t golden, it’s deadly.
-                                </p>
-                            </div>
-                            <div class="card-footer text-center">
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
-                                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
+                    </ng-container>
                 </div>
             </div>
         </div>
