update button design

--- a/src/app/common/components/review/review.component.html
+++ b/src/app/common/components/review/review.component.html
@@ -1,4 +1,4 @@
-<button (click)="openReviewModal(content)" class="btn btn-primary">Write a Review</button>
+<button (click)="openReviewModal(content)" class="btn btn-primary">感想を書く</button>
 
 <ng-template #content let-modal>
     <!-- <div class="modal-header">
