--- a/src/app/rental/rental-requests/rental-requests-dialog.html
+++ b/src/app/rental/rental-requests/rental-requests-dialog.html
@@ -1,7 +1,7 @@
-<h2 mat-dialog-title>振替日時を提案する</h2>
+<h2 mat-dialog-title>日時の調整提案</h2>
 <mat-dialog-content class="mat-typography">
-  <p>予約リクエスト日時の都合がつかない場合、振替日時を提案することができます。</p>
-  <p>もし予め受付不可日がわかっている場合は、スケジュール管理ページから日ごとに予約ブロックが可能です。</p>
+  <p>予約リクエスト日時の都合がつかない場合は日時の調整提案ができます。</p>
+  <p>受付不可日が事前にわかっている場合は早めにスケジュール管理ページから予約ブロックして機会損失を防ぎましょう。</p>
 
   <div class="space-top"></div>
   <div class="row">
