--- a/src/app/user/user-mybookings/user-mybookings.component.html
+++ b/src/app/user/user-mybookings/user-mybookings.component.html
@@ -34,20 +34,32 @@
                   </div>
                 </a>
                 <!-- <hr> -->
-                <div *ngIf="booking.status !== 're-pending'" class="card-footer">
-                  <a href="https://works.do/R/ti/p/ahamada321@aerume" target="_blank">
-                    <img src="./assets/img/icons/line-square-default.png" alt="LINEで待ち合わせ場所調整する">
-                    <div>待ち合わせ場所を調整する</div>
-                  </a>
-                  <br>
-                  <button *ngIf="!isExpired(booking.startAt)" class="btn btn-danger" (click)="deleteConfirmation(booking._id); bookingDeleteIndex = i">予約キャンセル</button>
-                  <!-- <button *ngIf="isExpired(booking.startAt)" class="btn btn-danger" (click)="deleteConfirmation(booking._id); bookingDeleteIndex = i">レビューする</button> -->
-                  <app-review *ngIf="!booking.review && isExpired(booking.startAt)" [bookingId]="booking._id" (reviewSubmitted)="reviewHandler(i, $event)"></app-review>  
+                <div *ngIf="!isExpired(booking.startAt)"  class="card-footer">
+                  <div *ngIf="booking.status === 'active'">
+                    <a href="https://works.do/R/ti/p/ahamada321@aerume" target="_blank">
+                      <img src="./assets/img/icons/line-square-default.png" alt="LINEで待ち合わせ場所調整する">
+                      <div>待ち合わせ場所を調整する</div>
+                    </a>
+                  </div>
+                  <div *ngIf="booking.status === 'pending'">
+                    <button class="btn btn-danger" (click)="deleteConfirmation(booking._id); bookingDeleteIndex = i">予約キャンセル</button>
+                  </div>
+                  <div *ngIf="booking.status === 're-pending'">
+                    <p><button class="btn btn-primary" (click)="acceptPayment(booking.payment)">日時変更を受入れる</button></p>
+                    <p><button class="btn btn-gray" (click)="deleteConfirmation(booking._id); bookingDeleteIndex = i">予約をキャンセル</button></p>
+                    <p><button class="btn btn-danger" (click)="openDialog(booking)">日時を再調整する</button></p>
+                  </div>
                 </div>
-                <div *ngIf="booking.status === 're-pending'" class="card-footer">
-                  <button class="btn btn-sm btn-danger" (click)="acceptPayment(booking.payment)">変更提案を受け入れる</button>
-                  <button class="btn btn-sm" (click)="deleteConfirmation(booking._id); bookingDeleteIndex = i">予約キャンセル</button>
-                  <button class="btn btn-sm btn-warning" (click)="openDialog(booking)">再提案する</button>
+                <div *ngIf="isExpired(booking.startAt)" class="card-footer">
+                  <div *ngIf="booking.status === 'active'">
+                    <app-review *ngIf="!booking.review" [bookingId]="booking._id" (reviewSubmitted)="reviewHandler(i, $event)"></app-review>
+                    <div *ngIf="booking.review">
+                      <button class="btn btn-gray" disabled>レビュー済</button>
+                    </div>    
+                  </div>
+                  <div *ngIf="booking.status !== 'active'">
+                      <button class="btn btn-gray" disabled>自動キャンセル</button>
+                  </div>
                 </div>
             </div>
           </div>
