--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -104,12 +104,12 @@
                         <div class="card card-plain card-blog">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <!-- <div class="card-image">
-                                        <img class="img" src="{{ rental.course60img }}" />
-                                    </div> -->
                                     <div class="video-responsive">
                                         <iframe src="https://www.youtube.com/embed/rtSa_YxyODI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
+                                    <!-- <div *ngIf="!rental.video" class="card-image">
+                                        <img class="img" src="{{ rental.course60img }}" />
+                                    </div> -->
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body">
