--- a/src/app/user/user-mybookings/user-mybookings.component.html
+++ b/src/app/user/user-mybookings/user-mybookings.component.html
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-md-12 ml-auto mr-auto">
-            <h2 class="title">Upcoming bookings</h2>
+            <h2 class="title">Upcoming & finished bookings</h2>
             <h5 class="description">日時が正式確定した予約リストです！詳細場所の連絡をLINEで行ってください.</h5>
             <div class="space-top"></div>
           </div>
